--- a/monetdb5/RunMapprove.bat.in
+++ b/monetdb5/RunMapprove.bat.in
@@ -18,7 +18,7 @@ set PYTHONPATH=%buildbase%\testing;%srcdir%\..\testing;%PYTHONPATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\Mapprove.py" --config="%builddir%/conf/monetdb5.conf" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\Mapprove.py" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
