--- a/monetdb5/RunMserver.bat.in
+++ b/monetdb5/RunMserver.bat.in
@@ -22,6 +22,6 @@ set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\mal;%PATH%
 set PATH=%builddir%\tools;%PATH%
 
-mserver5.exe "--config=%builddir%\conf\monetdb5.conf" --set "monet_mod_path=%MOD_PATH%" %*
+mserver5.exe --set "monet_mod_path=%MOD_PATH%" %*
 
 endlocal
