--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -3046,16 +3046,8 @@ def main(argv) :
         par['M5'] = True
 
     config = opts.get('config')
-    if config is None and par['PACKAGE'] not in ('common', 'clients', 'gdk', 'java'):
-        # no --config given on the command line; we assume the M5 default
-        # and have monet_options.parse_options() re-parse the command line arguments
-        if par['M5']:
-            config = _configure(os.path.join('@QXsysconfdir@', 'monetdb5.conf'))
-        if config:
-            try:
-                opts, args = monet_options.parse_options(['--config='+config] + argv[1:], options, Usage, False)
-            except monet_options.Error:
-                sys.exit(1)
+    if config:
+        config = ' "--config=%s"' % config
 
     par['ALGEBRA'] = opts.get('algebra', 0)
     par['NOALGEBRA'] = opts.get('no-algebra', 0)
@@ -3353,7 +3345,7 @@ def main(argv) :
         exe = {}
         exe['Mtimeout']      = CheckExec('Mtimeout')     , 'Mtimeout -timeout %d ' % par['TIMEOUT']
         if par['M5']:
-            exe['Mserver']       = CheckExec('mserver5')     , '%s mserver5 "--config=%s" --debug=%s --set gdk_nr_threads=%s %s %s %s --set mapi_open=true --set xrpc_open=true --set mapi_port=%s --set xrpc_port=%s --set monet_prompt= --trace --forcemito --set mal_listing=2 %s' % \
+            exe['Mserver']       = CheckExec('mserver5')     , '%s mserver5 %s --debug=%s --set gdk_nr_threads=%s %s %s %s --set mapi_open=true --set xrpc_open=true --set mapi_port=%s --set xrpc_port=%s --set monet_prompt= --trace --forcemito --set mal_listing=2 %s' % \
                                                                (env['setDBG'], config, env['GDK_DEBUG'], env['GDK_NR_THREADS'], env['setMONETDB_MOD_PATH'], env['setGDK_DBFARM'], env['setXRPC_DOCROOT'], env['MAPIPORT'], env['XRPCPORT'], env['MSERVER_SET'])
         exe['Mdiff']         = CheckExec('Mdiff')        , 'Mdiff'
         exe['python']        = CheckExec(sys.executable) , sys.executable
