java: remove XQuery related XRPC wrapper

--- a/java/build.xml
+++ b/java/build.xml
@@ -40,9 +40,6 @@ All Rights Reserved.
   <property name="mcl-package"          value="nl/cwi/monetdb/mcl" />
   <property name="client-package"       value="nl/cwi/monetdb/client" />
   <property name="util-package"         value="nl/cwi/monetdb/util" />
-  <property name="xrpc-api-package"     value="nl/cwi/monetdb/xquery/xrpc/api" />
-  <property name="xrpc-wrapper-package" value="nl/cwi/monetdb/xquery/xrpc/wrapper" />
-  <property name="xrpc-client-package"  value="nl/cwi/monetdb/xquery/xrpc/client" />
   <property name="mero-control-package" value="nl/cwi/monetdb/merovingian" />
 
   <property file="build.local.properties" />
@@ -57,13 +54,6 @@ All Rights Reserved.
   <property name="xmldb-jar"
     value="${jardir}/monetdb-${JDBC_MAJOR}.${JDBC_MINOR}-xmldb.jar" />
 
-  <property name="xrpc-api-jar"
-    value="${jardir}/xrpcapi.jar" />
-  <property name="xrpc-wrapper-jar"
-    value="${jardir}/xrpcwrapper.jar" />
-  <property name="xrpc-client-jar"
-    value="${jardir}/xrpcclient.jar" />
-
   <property name="mero-control-jar"
     value="${jardir}/merocontrol.jar" />
 
@@ -75,8 +65,6 @@ All Rights Reserved.
          to be fetched first -->
     <antcall target="jar_xmldb" />
 
-    <antcall target="distxrpc" />
-
     <antcall target="distmerocontrol" />
 
     <antcall target="doc" />
@@ -84,7 +72,6 @@ All Rights Reserved.
 
   <target name="distall">
     <antcall target="distjdbc" />
-    <antcall target="distxrpc" />
     <antcall target="distmerocontrol" />
   </target>
 
@@ -97,12 +84,6 @@ All Rights Reserved.
     <antcall target="jar_jdbc" />
     <antcall target="jar_mcl" />
     <antcall target="jar_jdbcclient" />
-  </target>
-
-  <target name="distxrpc">
-    <antcall target="jar_xrpc_api" />
-    <antcall target="jar_xrpc_wrapper" />
-    <antcall target="jar_xrpc_client" />
   </target>
 
   <target name="distmerocontrol">
@@ -160,53 +141,6 @@ All Rights Reserved.
       <manifest>
         <attribute name="Built-By" value="${user.name}" />
         <attribute name="Main-Class" value="nl.cwi.monetdb.client.JdbcClient" />
-      </manifest>
-    </jar>
-  </target>
-
-  <target name="jar_xrpc_api" depends="compile_xrpc_api">
-    <jar jarfile="${xrpc-api-jar}">
-      <fileset dir="${builddir}">
-        <include name="${xrpc-api-package}/**/*.class" />
-      </fileset>
-    </jar>
-  </target>
-  
-  <target name="jar_xrpc_wrapper"
-    depends="compile_util,compile_xrpc_api,compile_xrpc_wrapper">
-    <jar jarfile="${xrpc-wrapper-jar}">
-      <fileset dir="${builddir}">
-        <include name="${util-package}/**/*.class" />
-        <include name="${xrpc-api-package}/**/*.class" />
-        <include name="${xrpc-wrapper-package}/**/*.class" />
-      </fileset>
-      <fileset dir="${srcdir}">
-        <include name="${xrpc-wrapper-package}/wrapper_functions.xq" />
-      </fileset>
-      <manifest>
-        <attribute name="Built-By" value="${user.name}" />
-        <attribute name="Main-Class"
-          value="nl.cwi.monetdb.xquery.xrpc.wrapper.XRPCWrapper" />
-      </manifest>
-    </jar>
-  </target>
-  
-  <target name="jar_xrpc_client"
-    depends="compile_util,compile_xrpc_api,compile_xrpc_client">
-    <jar jarfile="${xrpc-client-jar}">
-      <fileset dir="${builddir}">
-        <include name="${util-package}/**/*.class" />
-        <include name="${xrpc-api-package}/**/*.class" />
-        <include name="${xrpc-client-package}/**/*.class" />
-      </fileset>
-      <fileset dir="${srcdir}">
-        <include name="${xrpc-client-package}/*.xml" />
-        <include name="${xrpc-client-package}/*.xq" />
-      </fileset>
-      <manifest>
-        <attribute name="Built-By" value="${user.name}" />
-        <attribute name="Main-Class"
-          value="nl.cwi.monetdb.xquery.xrpc.client.XRPCTestClient" />
       </manifest>
     </jar>
   </target>
@@ -298,51 +232,6 @@ All Rights Reserved.
       source="${javac_version}"
       >
       <include name="${util-package}/**/*.java" />
-    </javac>
-  </target>
-
-  <target name="compile_xrpc_api" depends="prepare">
-    <echo message="Compiling XRPC Java API" />
-    <javac
-      classpath="${srcdir}"
-      srcdir="${srcdir}"
-      destdir="${builddir}"
-      debug="${debug}"
-      optimize="${optimize}"
-      target="${javac_version}"
-      source="${javac_version}"
-      >
-      <include name="${xrpc-api-package}/*.java" />
-    </javac>
-  </target>
-
-  <target name="compile_xrpc_wrapper" depends="prepare">
-    <echo message="Compiling XRPC Wrapper" />
-    <javac
-      classpath="${srcdir}"
-      srcdir="${srcdir}"
-      destdir="${builddir}"
-      debug="${debug}"
-      optimize="${optimize}"
-      target="${javac_version}"
-      source="${javac_version}"
-      >
-      <include name="${xrpc-wrapper-package}/*.java" />
-    </javac>
-  </target>
-
-  <target name="compile_xrpc_client" depends="prepare">
-    <echo message="Compiling XRPC (test) client" />
-    <javac
-      classpath="${srcdir}"
-      srcdir="${srcdir}"
-      destdir="${builddir}"
-      debug="${debug}"
-      optimize="${optimize}"
-      target="${javac_version}"
-      source="${javac_version}"
-      >
-      <include name="${xrpc-client-package}/**/*.java" />
     </javac>
   </target>
 
@@ -469,7 +358,7 @@ All Rights Reserved.
 
   <!-- documentation target -->
   <target name="doc"
-    depends="compile_mcl,compile_jdbc,compile_util,compile_client,compile_xrpc_api,compile_xrpc_wrapper,compile_xrpc_client,compile_mero_control">
+    depends="compile_mcl,compile_jdbc,compile_util,compile_client,compile_mero_control">
     <javadoc
       destdir="${docdir}"
       author="true"
@@ -482,7 +371,6 @@ All Rights Reserved.
         <include name="${mcl-package}/**/*.java" />
         <include name="${client-package}/**/*.java" />
         <include name="${util-package}/**/*.java" />
-        <include name="${xrpc-api-package}/**/*.java" />
         <include name="${mero-control-package}/**/*.java" />
       </fileset>
 
@@ -491,7 +379,6 @@ All Rights Reserved.
         <include name="${mcl-package}/**/*.java" />
         <include name="${client-package}/**/*.java" />
         <include name="${util-package}/**/*.java" />
-        <include name="${xrpc-api-package}/**/*.java" />
         <include name="${mero-control-package}/**/*.java" />
       </fileset>
     </javadoc>
