--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -48,7 +48,7 @@ lib__sql = {
 		sql_result.mx \
 		sql_readline.c \
 		sql_emptyset.c \
-		sciql.mx \
+		sciql.c \
 		sql_bpm.c 
 	LIBS = ../../server/libsqlserver \
 		   ../../storage/libstore \
@@ -102,7 +102,7 @@ lib__sql = {
 headers_mal = {
 	HEADERS = mal
 	DIR = libdir/monetdb5
-	SOURCES = sql.mx sql_bpm.mal sciql.mx
+	SOURCES = sql.mx sql_bpm.mal sciql.mal
 }
 
 headers_autoload = {
@@ -111,5 +111,5 @@ headers_autoload = {
 	SOURCES = 40_sql.mal
 }
 
-EXTRA_DIST = 40_sql.mal sql_bpm.mal sql_bpm.h sql_emptyset.h sql_gencode.h sql_optimizer.h sql_scenario.h sql_user.h sql_readline.h
+EXTRA_DIST = 40_sql.mal sql_bpm.mal sql_bpm.h sql_emptyset.h sql_gencode.h sql_optimizer.h sql_scenario.h sql_user.h sql_readline.h sciql.mal sciql.h
 EXTRA_DIST_DIR = Tests
