--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -46,8 +46,7 @@ lib__sql = {
 		sql_optimizer.c \
 		sql_result.mx \
 		sql_readline.c \
-		sql_emptyset.c \
-		sciql.c
+		sql_emptyset.c
 	LIBS = ../../server/libsqlserver \
 		   ../../storage/libstore \
 		   ../../storage/bat/libbatstore \
@@ -97,7 +96,7 @@ lib__sql = {
 headers_mal = {
 	HEADERS = mal
 	DIR = libdir/monetdb5
-	SOURCES = sql.mx sciql.mal
+	SOURCES = sql.mx
 }
 
 headers_autoload = {
@@ -106,5 +105,5 @@ headers_autoload = {
 	SOURCES = 40_sql.mal
 }
 
-EXTRA_DIST = 40_sql.mal sql_emptyset.h sql_gencode.h sql_optimizer.h sql_scenario.h sql_user.h sql_readline.h sciql.mal sciql.h
+EXTRA_DIST = 40_sql.mal sql_emptyset.h sql_gencode.h sql_optimizer.h sql_scenario.h sql_user.h sql_readline.h
 EXTRA_DIST_DIR = Tests
