--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -1756,7 +1756,7 @@ def GetBitsAndModsAndThreads(env) :
         if not env['TST_BITS'] or not env['TST_MODS']:
             print(' '.join(cmd) + "\n\n", file=sys.stderr, end='')
             print(qOut, file=sys.stderr, end='')
-            print.write(file=sys.stderr)
+            print(file=sys.stderr)
             print(qErr, file=sys.stderr, flush=True)
             rtrn = 1
     else:
