--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -159,10 +159,6 @@ if os.path.exists('/usr/bin/coredumpctl'):
             # if we can't raise the limit, just forget it
             pass
 
-def ErrExit(msg):
-    print(msg, file=sys.stderr, flush=True)
-    sys.exit(1)
-
 def _configure(str):
     # expand configure variables in str and return result
     config = [
@@ -394,12 +390,8 @@ CONDITIONALS = {
     # hence, we set them only at runtime in main() below
     'KNOWNFAIL'            : False, # skip on release branch when not in testweb
     'HAVE_MONETDBJDBC_JAR' : False,
-    'HAVE_JAVA'            : False,
-    'HAVE_JAVAJDBC'        : False,
-    'HAVE_JAVAMEROCONTROL' : False,
     'HAVE_JDBCCLIENT_JAR'  : False,
     'HAVE_JDBCTESTS_JAR'   : False,
-    'HAVE_JDBCTESTS_DIR'   : False,
     'HAVE_JDBCTESTS'       : False,
 #    'HAVE_LIBPANDAS3'      : False,
     'HAVE_LIBSCIPY3'       : False,
@@ -3142,9 +3134,9 @@ def CheckClassPath() :
         cp = ''
         cpx = ''
     JARS = {
-        'HAVE_MONETDBJDBC_JAR' : re.compile('^monetdb-jdbc-[0-9]\.[0-9]+(-[a-f0-9]{12})?\.jre[0-9]+\.jar$'),
-        'HAVE_JDBCCLIENT_JAR'  : re.compile('^jdbcclient\.jre[0-9]+\.jar$'),
-        'HAVE_JDBCTESTS_JAR'   : re.compile('^jdbctests\.jar$'),
+        'HAVE_MONETDBJDBC_JAR' : re.compile(r'^monetdb-jdbc-[0-9]\.[0-9]+(-[a-f0-9]{12})?\.jre[0-9]+\.jar$'),
+        'HAVE_JDBCCLIENT_JAR'  : re.compile(r'^jdbcclient\.jre[0-9]+\.jar$'),
+        'HAVE_JDBCTESTS_JAR'   : re.compile(r'^jdbctests\.jar$'),
     }
     # check for known JARs in CLASSPATH files
     for p in cp.split(os.pathsep):
@@ -3171,18 +3163,12 @@ def CheckClassPath() :
             for f in listdir(d):
                 p = os.path.join(d,f)
                 if os.path.isfile(p):
-                    if f == 'BugConcurrent_clients_SF_1504657.class':
-                        C = 'HAVE_JDBCTESTS_DIR'
-                        if not CONDITIONALS.get(C):
-                            cp = cp + os.pathsep + d
-                            CONDITIONALS[C] = True
-                    else:
-                        C = 'HAVE_%s' % f.upper().replace('.','_')
-                        if C not in JARS:
-                            C = 'HAVE_MONETDBJDBC_JAR'
-                        if not CONDITIONALS.get(C) and JARS[C].match(f):
-                            cp = cp + os.pathsep + p
-                            CONDITIONALS[C] = True
+                    C = 'HAVE_%s' % f.upper().replace('.','_')
+                    if C not in JARS:
+                        C = 'HAVE_MONETDBJDBC_JAR'
+                    if not CONDITIONALS.get(C) and JARS[C].match(f):
+                        cp = cp + os.pathsep + p
+                        CONDITIONALS[C] = True
     if cp:
         os.environ['CLASSPATH'] = cp
     if verbosity > 1:
@@ -3194,8 +3180,7 @@ def CheckClassPath() :
         if miss:
             Warn('Could not find%s in\nCLASSPATH="%s"' % (miss,cpx))
     if CONDITIONALS.get('HAVE_MONETDBJDBC_JAR') and \
-       ( CONDITIONALS.get('HAVE_JDBCTESTS_JAR') or
-         CONDITIONALS.get('HAVE_JDBCTESTS_DIR') ):
+       CONDITIONALS.get('HAVE_JDBCTESTS_JAR'):
         CONDITIONALS['HAVE_JDBCTESTS'] = True
 ### CheckClassPath() #
 
@@ -3464,7 +3449,6 @@ def main(argv) :
     parser.add_argument('--SQLDUMP', action='store', dest='SQLDUMP', metavar='<sql-dump program>', help='default: %s' % dft['SQLDUMP'])
     parser.add_argument('--RCLIENT', action='store', dest='RCLIENT', metavar='<R program>', help='default: %s' % dft['RCLIENT'])
     parser.add_argument('--RUBYCLIENT', action='store', dest='RUBYCLIENT', metavar='<ruby program>', help='default: %s' % dft['RUBYCLIENT'])
-    parser.add_argument('--concurrent', action='store_true', dest='concurrent', help='There are concurrent Mtest runs using the same MonetDB installation')
     parser.add_argument('--dbg', action='store', dest='dbg', metavar='<debugger/valgrind>', help="debugger to start before each server")
     parser.add_argument('--mserver_set', action='append', dest='mserver_set', metavar='<mserver5_option>', help="This passes a single set to the server")
     parser.add_argument('--loadmodule', action='append', dest='loadmodule', metavar='<module_name>', help="Pass on loadmodule to mserver5")
@@ -3521,9 +3505,6 @@ def main(argv) :
     a = opts.gdk_dbfarm
     if a is not None:
         env['GDK_DBFARM'] = a
-    a = opts.concurrent
-    if a:
-        env['CONCURRENT'] = a
     a = opts.dbg
     if a is not None:
         env['DBG'] = a
