Export functions needed by 'pipeline'

--- a/monetdb5/modules/kernel/CMakeLists.txt
+++ b/monetdb5/modules/kernel/CMakeLists.txt
@@ -18,7 +18,7 @@ target_sources(kernel
   bat5.c
   algebra.c algebra.h
   group.c group.h
-  aggr.c
+  aggr.c aggr.h
   batmmath.c
   batstr.c
   batcolor.c
