--- a/monetdb5/modules/kernel/CMakeLists.txt
+++ b/monetdb5/modules/kernel/CMakeLists.txt
@@ -47,6 +47,7 @@ target_compile_definitions(kernel
 
 target_link_libraries(kernel
   PRIVATE
+  $<$<BOOL:${Iconv_FOUND}>:Iconv::Iconv>
   monetdb_config_header
   mutils
   bat
