--- a/.editorconfig
+++ b/.editorconfig
@@ -23,3 +23,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
+
+[{clients/{mapilib,odbc},gdk}/**.{c,h}{,.in}]
+tab_width = 8
+max_line_length = 72
