--- a/sql/scripts/CMakeLists.txt
+++ b/sql/scripts/CMakeLists.txt
@@ -30,6 +30,7 @@ install(FILES
   45_uuid.sql
   46_profiler.sql
   47_regexp.sql
+  48_txtsim.sql
   52_describe.sql
   58_hot_snapshot.sql
   75_storagemodel.sql
