--- a/sql/backends/monet5/CMakeLists.txt
+++ b/sql/backends/monet5/CMakeLists.txt
@@ -102,6 +102,7 @@ set(include_sql_files
   46_profiler
   47_regexp
   48_txtsim
+  49_strings
   52_describe
   58_hot_snapshot
   75_storagemodel
