Use proper conditional for C integration.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -37,6 +37,9 @@ set(QXSOURCE "${CMAKE_SOURCE_DIR}")
 set(QXsysconfdir "${CMAKE_INSTALL_FULL_SYSCONFDIR}")
 set(SOURCE "${CMAKE_SOURCE_DIR}")
 
+if (HAVE_CUDF)
+  set(HAVE_CUDF_FALSE "#")
+endif(HAVE_CUDF)
 if (HAVE_CURL)
   set(HAVE_CURL_FALSE "#")
 endif(HAVE_CURL)
