Add a test conditional HAVE_ICONV.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -52,6 +52,9 @@ endif(HAVE_GEOM)
 if (HAVE_HGE)
   set(HAVE_HGE_FALSE "#")
 endif(HAVE_HGE)
+if (HAVE_ICONV)
+  set(HAVE_ICONV_FALSE "#")
+endif(HAVE_ICONV)
 if (HAVE_LIBBZ2)
   set(HAVE_LIBBZ2_FALSE "#")
 endif(HAVE_LIBBZ2)
